@@ -1,3 +1,8 @@
+12/28/2005 Bob Rossi <bob@brasko.net>
+
+	* Makefile.in: Autogenerated.
+	* cgdb.texinfo: Changed title.
+
 12/27/2005 Bob Rossi <bob@brasko.net>
 
 	* Makefile.am: Added.
